fix line wrapping issue in sql text and results in safari

--- a/themes/_base/editor.css
+++ b/themes/_base/editor.css
@@ -19,4 +19,5 @@ div.sql_lines {
 pre.sql_output {
 	float: left;
 	width: 90%;
+	white-space: normal;
 }
